[package]
name = "cnn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cnn"
path = "src/lib.rs"

[[bin]]
name = "cnn"
path = "src/main.rs"

[dependencies]
rand_distr = "0.4.3"
rand = "0.8.5"
mnist = "0.5.0"